--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,6 +1,9 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
   "extends": ["ultracite"],
+  "files": {
+    "includes": ["package.json", "README.md", "src/*"]
+  },
   "javascript": {
     "formatter": {
       "lineWidth": 120,
