--- a/package.json
+++ b/package.json
@@ -50,9 +50,6 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@clack/prompts": "^0.11.0",
-    "@effect/cli": "^0.69.2",
-    "@effect/platform-bun": "^0.79.0",
-    "effect": "^3.17.9"
+    "@clack/prompts": "^0.11.0"
   }
 }
