setup effect tasks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,10 @@
       "@/lib/*": ["src/lib/*"]
     },
     "strictNullChecks": true
-  }
+  },
+  "plugins": [
+    {
+      "name": "@effect/language-service",
+    }
+  ]
 }
