--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
+    "@effect/language-service": "^0.36.0",
     "@types/bun": "latest",
     "ultracite": "5.2.4"
   },
@@ -50,6 +51,10 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@clack/prompts": "^0.11.0"
+    "@clack/prompts": "^0.11.0",
+    "@effect/cli": "^0.69.2",
+    "@effect/platform": "^0.90.6",
+    "@effect/platform-bun": "^0.79.0",
+    "effect": "^3.17.9"
   }
 }
