--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "type": "module",
   "scripts": {
-    "build": "echo 'No build step needed - shipping TypeScript source'",
+    "build": "rm -rf dist && rolldown src/index.ts --dir dist --minify",
     "dev": "bun src/index.ts",
     "fmt": "ultracite lint && ultracite format",
     "test:cli": "bun run src/index.ts --help"
@@ -43,8 +43,10 @@
   "license": "MIT",
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
+    "@effect/experimental": "^0.54.6",
     "@effect/language-service": "^0.36.0",
     "@types/bun": "latest",
+    "rolldown": "^1.0.0-beta.34",
     "ultracite": "5.2.4"
   },
   "peerDependencies": {
