--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@bunkalabs/termnotes",
-  "version": "0.1.8",
+  "name": "termnotes-cli",
+  "version": "0.0.1",
   "description": "Zero-config daily notes and tasks CLI for your terminal",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "bin": {
     "tn": "bin/tn",
     "termnotes": "bin/tn"
@@ -11,19 +11,20 @@
   "scripts": {
     "build": "rm -rf dist && rolldown src/index.ts --dir dist --minify",
     "dev": "bun src/index.ts",
-    "fmt": "ultracite lint && ultracite format",
+    "fmt": "ultracite fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:cli": "bun run src/index.ts --help"
   },
   "engines": {
-    "bun": ">=1.0.0"
+    "bun": ">=1.2.22"
   },
   "files": [
     "bin/",
-    "src/",
+    "dist/",
     "README.md",
-    "package.json"
+    "package.json",
+    "LICENSE"
   ],
   "repository": {
     "type": "git",
@@ -42,15 +43,15 @@
     "markdown"
   ],
   "author": "Chris Tse",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "devDependencies": {
-    "@biomejs/biome": "2.2.0",
+    "@biomejs/biome": "2.2.4",
     "@effect/experimental": "^0.54.6",
     "@effect/language-service": "^0.36.0",
     "@effect/vitest": "^0.25.1",
-    "@types/bun": "latest",
+    "@types/bun": "^1.2.22",
     "rolldown": "^1.0.0-beta.34",
-    "ultracite": "5.2.4",
+    "ultracite": "5.4.5",
     "vitest": "^3.2.4"
   },
   "peerDependencies": {
@@ -58,9 +59,12 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.11.0",
-    "@effect/cli": "^0.69.2",
-    "@effect/platform": "^0.90.6",
-    "@effect/platform-bun": "^0.79.0",
+    "@effect/cli": "^0.70.0",
+    "@effect/cluster": "^0.49.3",
+    "@effect/platform": "^0.91.1",
+    "@effect/platform-bun": "^0.80.0",
+    "@effect/rpc": "^0.70.0",
+    "@effect/sql": "^0.45.0",
     "effect": "^3.17.9"
   }
 }
